// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={undefined}
    >
      <View
        collapsable={false}
        style={undefined}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          menuName="menu-1"
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
          testID={undefined}
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "rgba(0, 0, 0, .9)",
                  "fontSize": 17,
                  "fontWeight": "600",
                  "marginHorizontal": 16,
                  "textAlign": "center",
                },
                Object {
                  "color": "#f57e20",
                  "paddingVertical": 20,
                },
              ]
            }
          >
            Pending Orders
              ▾
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 2`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={undefined}
    >
      <View
        collapsable={false}
        style={undefined}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          menuName="menu-2"
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
          testID={undefined}
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "rgba(0, 0, 0, .9)",
                  "fontSize": 17,
                  "fontWeight": "600",
                  "marginHorizontal": 16,
                  "textAlign": "center",
                },
                Object {
                  "color": "#f57e20",
                  "paddingVertical": 20,
                },
              ]
            }
          >
            All Orders
              ▾
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
